--- a/setup.cfg
+++ b/setup.cfg
@@ -13,5 +13,4 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501,
-    */settings.py:I004
+    */settings.py:E501
